--- a/Advanced_JS/working-enviroment/npm package/package.json
+++ b/Advanced_JS/working-enviroment/npm package/package.json
@@ -15,5 +15,13 @@
     "game"
   ],
   "author": "NimbleFish",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6"
+  },
+  "dependencies": {
+    "core-js": "^3.6.5"
+  }
 }
