decline buyList and task summOfBuy restruct for typescript

--- a/Advanced_JS/typescript/summOfBuy/package.json
+++ b/Advanced_JS/typescript/summOfBuy/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ts build": "tsc",
-    "ts start": "tsc -w",
+    "ts_build": "tsc",
+    "ts": "tsc -w",
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "lint": "eslint .",
