--- a/Advanced_JS/typescript/summOfBuy/package.json
+++ b/Advanced_JS/typescript/summOfBuy/package.json
@@ -22,6 +22,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "@types/jest": "^26.0.20",
     "babel-jest": "^25.4.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
@@ -33,6 +34,8 @@
     "jest": "^25.4.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "ts-jest": "^26.5.0",
+    "ts-loader": "^8.0.15",
     "typescript": "^4.1.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
