--- a/Advanced_JS/js-advanced-diploma/.babelrc
+++ b/Advanced_JS/js-advanced-diploma/.babelrc
@@ -7,5 +7,13 @@
         "corejs": 3
       }
     ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
   ]
 }
