--- a/Advanced_JS/js-advanced-diploma/package.json
+++ b/Advanced_JS/js-advanced-diploma/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
     "core-js": "^3.6.5"
   }
 }
