and add stylesheet later

--- a/React/composition/decomposition/src/config.json
+++ b/React/composition/decomposition/src/config.json
@@ -3,11 +3,11 @@
     "diviz": "Найдётся всё. Например, ",
     "searchButtonText": "Найти",
     "news": [
-        "Путин упростил получение автомобильных номеров",
-        "В команде Зеленского раскрыли план реформ на Украине",
-        "\"Турпомощь\" прокомментировала гибель десятков россиян а Анталье",
-        "Суд закрыл дело Демпартии США против России",
-        "На Украине призвали создать ракеты для удара по Москве"
+        { "img": 1, "text": "Путин упростил получение автомобильных номеров" },
+        { "img": 1, "text": "В команде Зеленского раскрыли план реформ на Украине" },
+        { "img": 3, "text": "\"Турпомощь\" прокомментировала гибель десятков россиян а Анталье" },
+        { "img": 4, "text": "Суд закрыл дело Демпартии США против России" },
+        { "img": 5, "text": "На Украине призвали создать ракеты для удара по Москве" }
     ],
     "country": "Германии",
     "afisha": [
@@ -20,15 +20,15 @@
         { "name": "Ночь. Мир в это время", "channel": "earthTV" },
         { "name": "Андрейй Возн...", "channel": "Совершенно секретно" }
     ],
-    "weather": { "now": 17, "day": 17, "night": 20 },
+    "weather": { "now": 17, "morning": 17, "day": 20 },
     "vizits": [
         { "target": "Недвижимость", "theme": "о сталинках" },
         { "target": "Маркет", "theme": "люстры и светильники" },
         { "target": "Авто.ру", "theme": "привод 4х4 до 500 000" }
     ],
     "valute": [
-        { "name": "USD MOEX", "currency": 63.52, "dynamic": 0.09 },
-        { "name": "EUR MOEX", "currency": 70.86, "dynamic": 0.14 },
-        { "name": "НЕФТЬ", "currency": 64.9, "dynamic": 1.63 }
+        { "name": "USD MOEX", "currency": 63.52, "dynamic": "+0.09" },
+        { "name": "EUR MOEX", "currency": 70.86, "dynamic": "+0.14" },
+        { "name": "НЕФТЬ", "currency": 64.9, "dynamic": "+1.63" }
     ]
 }
